fix: sprint review fixes
#320